# BLAST-Lite

./: .gitignore  .hscfg  .readthedocs.yml  NOTICE  README.md  SWR-22-69.docx  environment.yml  example.ipynb  example_EV_life.ipynb  lfp_gr_SonyMurata3Ah_2018.py  license.txt  nca_gr_Panasonic3Ah_2018.py  nmc111_gr_Kokam75Ah_2017.py  nmc111_gr_Sanyo2Ah_2014.py  pyproject.toml  version.txt
MATLAB BLAST-Lite/: Model_NMC_Gr.m  README.txt
MATLAB BLAST-Lite/Application profiles/: sources.txt
MATLAB BLAST-Lite/Functions/: func_LifeMdl_UpdateOutput.m  func_LifeMdl_UpdateStates.m  func_ThrowOutBadData.m  rainflow.mexw64
blast/: __init__.py  functions.py
blast/functions/: simulation.py
blast/models/: __init__.py  _available_models.py  degradation_model.py  lfp_gr_250AhPrismatic_2019.py  lfp_gr_SonyMurata3Ah_2018.py  lmo_gr_NissanLeaf66Ah_2ndLife_2020.py  model list.csv  nca_gr_Panasonic3Ah_2018.py  nca_grsi_SonyMurata2p5Ah_2023.py  nmc111_gr_Kokam75Ah_2017.py  nmc111_gr_Sanyo2Ah_2014.py  nmc622_gr_DENSO50Ah_2021.py  nmc811_grSi_LGM50_5Ah_2021.py  nmc811_grSi_LGMJ1_4Ah_2020.py  nmc_gr_50Ah_B1_2020.py  nmc_gr_50Ah_B2_2020.py  nmc_gr_75Ah_A_2019.py  nmc_lto_10Ah_2020.py
blast/utils/: __init__.py  demo.py  functions.py  rainflow.py  state_functions.py
climates/: get_NSRDB_climate_data.py
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
docs/source/api/blast/: index.rst
docs/source/api/blast/models/: index.rst
docs/source/api/blast/models/available_models/: index.rst
docs/source/api/blast/models/degradation_model/: index.rst
docs/source/api/blast/models/lfp_gr_250AhPrismatic_2019/: index.rst
docs/source/api/blast/models/lfp_gr_SonyMurata3Ah_2018/: index.rst
docs/source/api/blast/utils/: index.rst
docs/source/autoapi/: index.rst
docs/source/autoapi/blast/: index.rst
docs/source/autoapi/blast/models/: index.rst
docs/source/autoapi/blast/utils/: index.rst
docs/source/pages/: api.rst  readme.rst  user_guide.rst
examples/: Telsa_Survey_Model3SR.xlsx  TeslaInfo_Model3LR.csv  example.ipynb  example_EV_life.ipynb  example_fast_calculations.ipynb  example_stationary_storage_life.ipynb
examples/application profiles/Electric vehicle/: annual_vmt_cdf.csv  commercial_ev.csv  vehicle annual miles traveled distributions.xlsx
examples/climates/: hourly_temperature_miami.csv  nsrdb_honolulu.csv
functions/: read_NSRDB.py  simulation.py  state_functions.py
matlab/: simulate_battery_aging.m
matlab/Climate data/: Top100MSA_hourlyClimateData.mat
matlab/Functions/: func_LifeMdl_LoadParameters.m  func_LifeMdl_StressStatistics.m  rainflow.m  rainflow.mexw32  sig2ext.m
models/: degradation_model.py  lfp_gr_250AhPrismatic_2022.py  lfp_gr_SonyMurata3Ah_2018.py  lmo_gr_NissanLeaf66Ah_2ndLife_2020.py  model list.csv  nmc111_gr_Kokam75Ah_2017.py  nmc111_gr_Sanyo2Ah_2014.py  nmc811_grSi_LGMJ1_4Ah_2020.py  nmc_lto_10Ah_2020.py
profiles/: Commercial BESS (NREL).csv  Commercial peak shaving.csv  EV charging support corner charging station.csv  EV charging support rental car depot.csv  Frequency containment reserve.csv  PV-BESS (CA, mild).csv  PV-BESS (Germany, aggresive).csv  Telecom backup power.csv
profiles/Electric vehicle/: annual_vmt_cdf.csv  personal_ev_combined.csv  personal_ev_largebatt.csv  personal_ev_smallbatt.csv
python/: example.ipynb  example_EV_life.ipynb  lfp_gr_SonyMurata3Ah_2018.py  lmo_gr_NissanLeaf66Ah_2ndLife_2020.py  nca_gr_Panasonic3Ah_2018.py  nmc111_gr_Kokam75Ah_2017.py  nmc111_gr_Sanyo2Ah_2014.py  nmc811_grSi_LGMJ1_4Ah_2020.py  nmc_lto_10Ah_2020.py  version.txt
python/functions/: extract_stressors.py  rainflow.py  simulation.py
tests/: foo.py
(+26 files in other folders)
